# doa-md-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  cs-upload.bat  deploy.sh  md-poll.bat  md-report.bat  md-token.bat  pyproject.toml
.github/workflows/: deploy.yml
api/: margin.py  margin_cli.py  sales.py  settle_client.py  settle_probe.py
crawler/: auto_login.py  bootstrap_session.py  channels.yaml  cs_parser.py  import_notion.py  notify.py  parse.py  report.py  run.py  store.py  sync_channels.py  yt_poll.py
crawler/adapters/: __init__.py  base.py  html_adapter.py  playwright_adapter.py  rss_adapter.py
data/notion_import/: events.csv  md_contacts.csv  vendor_master.csv
deploy/: DEPLOY.md  doa-md-poll.service  doa-md-poll.timer  doa-md-web.service  jeongsan.conf  nginx-md.conf
jeongsan-patches/: README.md  apply.sh
jeongsan-patches/parsers/: toss_settlement.py
jeongsan-patches/routers/: toss_fee_estimate.py  upload_toss.py
scripts/: factory_list_to_json.py
web/: next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: ActivityTimeline.tsx  BigSeasonChecklist.tsx  BrandPL.tsx  Calendar.tsx  ChannelPL.tsx  ChannelsBoard.tsx  CommentsPanel.tsx  ConflictBanner.tsx  ContactsManager.tsx  CsCriticalCard.tsx  CsManualPanel.tsx  CsWidget.tsx  EventsTable.tsx  MatrixView.tsx  MdPL.tsx  OpsBoard.tsx  ProductsPanel.tsx  ReportCard.tsx  RetryAttachButton.tsx  SeasonBanner.tsx  Simulator.tsx  SkuMatrix.tsx  SourcingBoard.tsx  StatsView.tsx  SuppliersManager.tsx  SystemHealthCard.tsx  TemplatesManager.tsx  (+2 more)
(+58 files in other folders)
