[project]
name = "doa-md-agent"
version = "0.1.0"
description = "도아 MD 통합 에이전트 — 행사 모니터링/마진 계산/구좌 뷰어"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.49",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "pydantic>=2.7",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "python-dotenv>=1.0",
    "slack-sdk>=3.33",
    "notion-client>=2.2",
    "apscheduler>=3.10",
]

[project.scripts]
md-crawl = "crawler.run:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["crawler*", "api*"]
